--- a/electron/src/renderer/app.less
+++ b/electron/src/renderer/app.less
@@ -1,6 +1,7 @@
 @import "~antd/lib/style/themes/default.less";
 @import "~antd/dist/antd.less";
 @import "~ant-design-draggable-modal/dist/index.css";
+@import "~leaflet/dist/leaflet.css";
 @primary-color: #fa8c16;
 
 .clickable {
@@ -47,7 +48,7 @@
 	display: none;
 }
 
-.tooltipControls .highlight, .highlight:hover {
+.tooltipControls .highlight, .highlight:hover, .leaflet-interactive:hover {
 	filter: drop-shadow(0px 0px 3px black);
 }
 
@@ -125,6 +126,10 @@ body {
 			margin-top: 75vh;
 			margin-left: 80vw;
 		}
+
+		.leaflet-control-container {
+			visibility: hidden;
+		}
 	}
 }
 
@@ -158,10 +163,34 @@ body {
 		text-align: center;
 	}
 
-	td > button {
+	td {
+		text-align: center;
+	}
+
+	td > button.minizwerg {
 		display: block;
 
 		margin: 20px auto 0 auto;
 	}
+
+	td button.reset .anticon {
+		font-size: 20px;
+
+		width: 20px;
+		height: 24px;
+	}
 }
 
+.leaflet-container {
+	background: none;
+}
+
+.leaflet-popup {
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+
+	z-index: 1000;
+
+	.leaflet-popup-content-wrapper {
+		border-radius: 0;
+	}
+}
