--- a/packages/web/src/assets/scss/App.scss
+++ b/packages/web/src/assets/scss/App.scss
@@ -1,9 +1,11 @@
 $bg-color: yellow;
 $border-color: red;
 
-.app {
-  font-family: helvetica, arial, sans-serif;
-  padding: 2em;
-  border: 5px solid $border-color;
+#root {
+	font-family: helvetica, arial, sans-serif;
 
+	height: 100%;
+	padding: 2em;
+
+	border: 5px solid $border-color;
 }
