--- a/packages/web/src/assets/scss/App.scss
+++ b/packages/web/src/assets/scss/App.scss
@@ -16,26 +16,51 @@ $border-color: red;
 		width: 50px;
 	}
 	.key-input-body{
-		background-color: #eaeaea;
+		position: relative;
 	}
+	.key-input-body:before {
+		content: ' ';
+		display: block;
+		position: absolute;
+		left: 0;
+		top: 0;
+		width: 100%;
+		height: 100%;
+		opacity: 0.6;
+		background: url("../Background.jpg");
+		filter: blur(5px);
+		z-index: -1;
+		background-repeat: no-repeat;
+		background-position: 50% 0;
+		background-size: cover;
+	  }
+	  
 	.key-input-div{
 		display: flex;
 		justify-content: center;
-		padding-top: 30vh;
+		align-items: center;
+		height: 100%;
 		.key-input-container{
-			width: 50vw;
 			text-align: center;
+			background-color: rgba(255, 255, 255, 0.75);
+			padding: 20px;
+			border-radius: 5px;
+			max-width: 1000px;
 			h1{
-				font-size: 50px;
+				font-size:25px;
 				margin-bottom: 5px;
 				font-weight: bold;
 			}
-			Input{
-				font-size: 25px;
+			input{
+				font-size: 18px;
 			}
-			Button{
-				margin-top: 5px;
-				height: 50px;
+			button{
+				height: 38px;
+			}
+			p{
+				text-align: left;
+				margin: 10px;
+				font-size: 16px;
 			}
 		}
 	}
@@ -50,6 +75,21 @@ $border-color: red;
 				width: 200px;
 				margin: 2px;
 			}
+		}
+	}
+}
+
+.openDialog {
+	table {
+		width: 100%;
+		td {
+			text-align: center;
+		}
+		.ant-avatar {
+			cursor: pointer
+		}
+		tr:nth-child(2) td {
+			padding-top: 10px;
 		}
 	}
 }
