--- a/packages/web/src/assets/scss/App.scss
+++ b/packages/web/src/assets/scss/App.scss
@@ -1,6 +1,20 @@
 $bg-color: yellow;
 $border-color: red;
 
+::-webkit-scrollbar {
+	width: 10px;
+	height: 10px;
+}
+::-webkit-scrollbar-track {
+	background: #f1f1f1;
+}
+::-webkit-scrollbar-thumb {
+	background: #888;
+}
+::-webkit-scrollbar-thumb:hover {
+	background: #555;
+}
+
 #root {
 	font-family: helvetica, arial, sans-serif;
 	height: 100%;
@@ -91,5 +105,24 @@ $border-color: red;
 		tr:nth-child(2) td {
 			padding-top: 10px;
 		}
+	}
+}
+
+.control-locomotive{
+	background-color: #f3f3f3;
+	border: 1px solid #d5d5d5;
+	border-radius: 10px;
+	padding: 5px;
+	margin-bottom: 5px;
+	transition: all 100ms ease-in-out;
+	margin-right: 5px;
+
+	h1, p{
+		margin-bottom: 0;
+	}
+	&:hover{
+		background-color: #eeeeee;
+		border-color: #d0d0d0;
+		cursor: pointer;
 	}
 }
