--- a/packages/web/src/assets/scss/App.scss
+++ b/packages/web/src/assets/scss/App.scss
@@ -91,6 +91,27 @@ $border-color: red;
 			}
 		}
 	}
+	.controls-container {
+		max-width: 1000px;
+		width: 100%;
+		background: white;
+		padding: 20px;
+		box-shadow: 0px 0px 6px 0px rgba(0, 0, 0, 0.11);
+		border-radius: 5px;
+		margin-bottom: 50px;
+	}
+
+	.control-page-title {
+		max-width: 1000px;
+		width: 100%;
+		margin: 20px 0;
+		vertical-align: middle;
+		display: flex;
+
+		h3 {
+			margin-bottom: 0;
+		}
+	}
 }
 
 .openDialog {
