--- a/packages/web/src/assets/scss/App.scss
+++ b/packages/web/src/assets/scss/App.scss
@@ -18,6 +18,24 @@ $border-color: red;
 #root {
 	font-family: helvetica, arial, sans-serif;
 	height: 100%;
+	user-select: none;
+	-moz-user-select: none;
+	-webkit-user-select: none;
+
+	.allow-select{
+		user-select: text;
+		-moz-user-select: text;
+		-webkit-user-select: text;
+	}
+
+	img {
+		-moz-user-select: none;
+		-webkit-user-select: none;
+		-ms-user-select: none;
+		user-select: none;
+		-webkit-user-drag: none;
+		-webkit-touch-callout: none;
+	}
 
 	.page-container{
 		height: 100%;
