--- a/packages/assets/css/controls/GuageControl.scss
+++ b/packages/assets/css/controls/GuageControl.scss
@@ -4,10 +4,10 @@
   position: relative;
   img{
     position: absolute;
-    width: 200px;
-    height: 200px;
+    width: 100%;
+    height: 100%;
     &.Background{
-      top: 12px;
+      top: 6%;
       z-index: 1;
     }
     z-index: 2;
