Added coupling info and control sync

--- a/packages/components/src/mapLeaflet/styles.less
+++ b/packages/components/src/mapLeaflet/styles.less
@@ -146,3 +146,16 @@
 		}
 	}
 }
+
+.frame-controls-modal {
+	width: 100%;
+
+	.ant-modal-content {
+		width: 100%;
+
+		.ant-modal-body {
+			width: 100%;
+			display: flex;
+		}
+	}
+}
