--- a/packages/electron/src/renderer/app.less
+++ b/packages/electron/src/renderer/app.less
@@ -116,3 +116,45 @@ body {
 		margin-bottom: 0;
 	}
 }
+
+.keybind-input {
+    display: flex;
+    align-items: center;
+    width: 365px;
+    justify-content: space-between;
+	padding: 8px 10px 10px 10px;
+	background-color: white;
+	border: 1px solid #d9d9d9;
+	border-radius: 2px;
+	cursor: pointer;
+
+	&:hover, &.active {
+		border-color: #ffa940;
+	}
+	
+	kbd {
+		background-color: #eee;
+		border-radius: 3px;
+		border: 1px solid #b4b4b4;
+		box-shadow: 0 1px 1px rgba(0, 0, 0, .2), 0 2px 0 0 rgba(255, 255, 255, .7) inset;
+		color: #333;
+		display: inline-block;
+		font-size: .85em;
+		font-weight: 700;
+		line-height: 1;
+		padding: 2px 4px;
+		white-space: nowrap;
+	}
+
+	&.active {
+		kbd {
+			opacity: 0.7;
+		}
+	}
+
+	.placeholder {
+		margin-left: 10px;
+		font-size: 12px;
+		color: #8f8f8f;
+	}
+}
