--- a/packages/web/src/assets/scss/App.scss
+++ b/packages/web/src/assets/scss/App.scss
@@ -191,4 +191,25 @@
 	}
 }
 
+.search-popup-div{
+	//pointer-events: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	z-index: 5000;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	.search-popup{
+		width: 40%;
+		height: 100px;
+		padding: 10px;
+		background-color: white;
+		text-align: center;
+	}
+}
+
 @import "~@rrox/assets/css/DarkMode.scss";
