--- a/packages/web/src/assets/scss/App.scss
+++ b/packages/web/src/assets/scss/App.scss
@@ -200,15 +200,50 @@
 	height: 100%;
 	background-color: rgba(0, 0, 0, 0.5);
 	z-index: 5000;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 	.search-popup{
+		margin: 10% auto;
 		width: 40%;
-		height: 100px;
 		padding: 10px;
 		background-color: white;
-		text-align: center;
+		position: relative;
+		input{
+			font-size: 25px;
+		}
+		.search-results{
+			width: 100%;
+			background-color: white;
+			max-height: 50vh;
+			overflow: auto;
+			padding-right: 2px;
+			.search-result{
+				background-color: white;
+				border: 1px solid black;
+				border-radius: 2px;
+				margin-bottom: 2px;
+				padding: 5px;
+				display: flex;
+				.text{
+					span{
+						line-height: normal;
+						display: block;
+					}
+					.result-title{
+						font-size: 20px;
+					}
+					width: 100%;
+				}
+				.buttons{
+					line-height: normal;
+					background-color: red;
+					width: 20%;
+				}
+			}
+		}
+		.search-close{
+			position: absolute;
+			top: 5px;
+			right: 5px;
+		}
 	}
 }
 
