--- a/packages/base-ui/src/app.less
+++ b/packages/base-ui/src/app.less
@@ -131,6 +131,12 @@ body {
 	&:hover, &.active {
 		border-color: #ffa940;
 	}
+
+	&.disabled {
+		background-color: #efefef;
+		border: 1px solid #d9d9d9!important;
+		cursor: default;
+	}
 	
 	kbd {
 		background-color: #eee;
