--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
       <img style="margin-bottom: 10px;" src="https://github.com/tom-90/RROx/blob/master/packages/assets/images/appIcon.ico?raw=true">
       <h1 class="project-name">RROx</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
-      <a href="https://github.com/tom-90/RROx/releases/latest/download/RailroadsOnline.Extended.Setup.exe" class="btn">Download</a>
+      <a href="https://github.com/tom-90/RROx/releases/latest/download/RailroadsOnline.Extended.msi" class="btn">Download</a>
     </header>
 
     <main id="content" class="main-content" role="main">
