Fixed map and world issues

--- a/plugins/map/src/renderer/map/styles/map.base.less
+++ b/plugins/map/src/renderer/map/styles/map.base.less
@@ -133,3 +133,16 @@
 .map-map .leaflet-control-search {
 	display: none!important;
 }
+
+.frame-controls-modal {
+	width: 100%;
+
+	.ant-modal-content {
+		width: 100%;
+
+		.ant-modal-body {
+			width: 100%;
+			display: flex;
+		}
+	}
+}
